; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_video.c_libvlc_video_get_scale.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_video.c_libvlc_video_get_scale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"zoom\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"autoscale\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @libvlc_video_get_scale(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca float, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call float @var_GetFloat(i32* %4, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store float %5, float* %3, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @var_GetBool(i32* %6, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store float 0.000000e+00, float* %3, align 4
  br label %10

10:                                               ; preds = %9, %1
  %11 = load float, float* %3, align 4
  ret float %11
}

declare dso_local float @var_GetFloat(i32*, i8*) #1

declare dso_local i64 @var_GetBool(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
